src/test/ui/parser/do-not-suggest-semicolon-before-array.stderr
error: expected one of `.`, `?`, `]`, or an operator, found `,`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:5:5
   |
LL |     [1, 3)
   |     ^ ^ help: `]` may belong here
   |     |
   |     unclosed delimiter

error: aborting due to previous error

